# UVCAndroid

./: .gitignore  COMPLETION_CHECKLIST.md  DELIVERABLES.md  NDI_INTEGRATION_GUIDE.md  NDI_INTEGRATION_SUMMARY.md  QUICK_NDI_INTEGRATION.md  START_HERE.md  VERIFICATION_GUIDE.md  gradle.properties
app/src/main/: AndroidManifest.xml
app/src/main/java/com/herohan/uvcapp/: CameraKeepAliveService.java  InternalCameraHelper.java  InternalCameraInfo.java
app/src/main/java/com/herohan/uvcapp/activity/: # Code Citations.md  MainActivity.java
app/src/main/java/com/herohan/uvcapp/fragment/: InternalCameraListDialogFragment.java  InternalCameraResolutionDialogFragment.java
app/src/main/java/com/herohan/uvcapp/widget/: PreviewOverlayView.java
app/src/main/res/drawable/: tally_circle.xml  tap_focus_marker.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
demo/src/main/java/com/herohan/uvcdemo/: BasicPreviewActivity.java
demo/src/main/java/com/serenegiant/uvcapp/: NdiCameraExampleActivity.java
demo/src/main/res/drawable/: tally_circle.xml
demo/src/main/res/layout/: activity_ndi_camera.xml
libuvccamera/: NDI_INTEGRATION_README.md
libuvccamera/src/main/cpp/ndi/: CMakeLists.txt
libuvccamera/src/main/java/com/serenegiant/ndi/: FourCCType.java  INdiFrameSender.java  Ndi.java  NdiFrameCleaner.java  NdiSender.java  NdiVideoFrame.java  UvcNdiFrameForwarder.java
libuvccamera/src/main/java/com/serenegiant/widget/: AspectRatioSurfaceView.java  AspectRatioTextureView.java  UVCCameraTextureView.java
libuvccamera/src/main/jni/: Android.mk  Application.mk
libuvccamera/src/main/jni/UVCCamera/: ConvertHelper.cpp  ConvertHelper.h  UVCPreview.cpp  UVCPreview.h
libuvccamera/src/main/jni/libuvc/include/libuvc/: libuvc.h
libuvccamera/src/main/jni/ndi/: Android.mk  color-conversion.cpp  ndi-sender.cpp  ndi-wrapper.h  ndi.cpp
obs-plugin/: CMakeLists.txt  README.md  net_discovery.cpp  net_discovery.h  uvc_custom_network.cpp  uvc_custom_network.h
